@@ -199,7 +199,7 @@ $td->runtest("remove page we don't have",
 show_ntests();
 # ----------
 $td->notify("--- Miscellaneous Tests ---");
-$n_tests += 79;
+$n_tests += 83;
 
 $td->runtest("qpdf version",
 	     {$td->COMMAND => "qpdf --version"},
@@ -216,6 +216,10 @@ foreach my $d (
     ["99", "object 0"],
     ["99b", "object 0"],
     ["101", "resolve for exception text"],
+    ["117", "other infinite loop"],
+    ["118", "other infinite loop"],
+    ["119", "other infinite loop"],
+    ["120", "other infinite loop"],
     )
 {
     my ($n, $description) = @$d;
