@@ -1,0 +1,2 @@
+WARNING: issue-119.pdf (file position 336): loop detected resolving object 4 0
+issue-119.pdf (file position 298): dictionary key is not not a name token
