@@ -1,0 +1,2 @@
+WARNING: issue-120.pdf (file position 85): loop detected resolving object 3 0
+issue-120.pdf (object 6 0, file position 85): supposed object stream 3 is not a stream
