@@ -1,5 +1,17 @@
 2017-07-26  Jay Berkenbilt  <ejb@ql.org>
 
+	* Fixes to infinite loops below also fix problems reported in
+	other issues and cover CVE-2017-9209, CVE-2017-11624,
+	CVE-2017-11625, CVE-2017-11626, and CVE-2017-11627.
+
+	* Don't attempt to interpret syntactic keywords (like R and
+	endobj) found while parsing content streams.
+
+	* Detect infinite loops while resolving objects. This could happen
+	if something inside an object that had to be resolved during
+	parsing, such as a stream length, recursively referenced the
+	object being resolved.
+
 	* CVE-2017-9208: Handle references to and appearance of object 0
 	as a special case. Object 0 is not allowed, and qpdf was using it
 	internally to represent direct objects.
